--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-firebase/app": "^13.1.0",
     "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/core": "^6.1.0",
@@ -36,6 +37,7 @@
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-drag-sort": "^2.4.4",
     "react-native-drax": "^0.9.1",
+    "react-native-email-link": "^1.12.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-flash-message": "^0.2.0",
     "react-native-fs": "^2.18.0",
