--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      
+
+      <!-- <meta-data android:name="com.facebook.sdk.ApplicationId" -->
+        
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -21,5 +25,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+       <meta-data android:name="com.facebook.sdk.ApplicationId" 
+       android:value="@string/facebook_app_id"/>
+       
     </application>
 </manifest>
