--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-firebase/app": "^13.1.0",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/core": "^6.1.0",
@@ -39,6 +40,7 @@
     "react-native-drax": "^0.9.1",
     "react-native-email-link": "^1.12.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-fbsdk-next": "^6.1.1",
     "react-native-flash-message": "^0.2.0",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
