--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,8 +11,6 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       
-
-      <!-- <meta-data android:name="com.facebook.sdk.ApplicationId" -->
         
       <activity
         android:name=".MainActivity"
@@ -26,8 +24,8 @@
         </intent-filter>
       </activity>
 
-       <meta-data android:name="com.facebook.sdk.ApplicationId" 
-       android:value="@string/facebook_app_id"/>
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+    <!-- <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/> -->
        
     </application>
 </manifest>
