fix google sign In

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,12 @@ android {
             keyPassword 'android'
         }
     }
+
+
+    task wrapper(type: Wrapper){
+        gradleVersion = '6.7.1'
+    }
+
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -189,6 +195,8 @@ android {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:29.0.2')
+    implementation 'com.google.firebase:firebase-analytics' 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
@@ -226,3 +234,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.android.application'
