--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "pod":"cd ios && pod install && cd .."
+    "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.12.0",
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "module-resolver": "^1.0.0",
     "moment": "^2.29.1",
+    "qs": "^6.10.2",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-confirmation-code-field": "^7.1.0",
@@ -77,6 +78,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/qs": "^6.9.7",
     "@types/react-native": "^0.66.2",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
