--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^12.1.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-video": "^5.2.0",
     "react-native-view-overflow": "^0.0.5",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
@@ -80,6 +81,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/qs": "^6.9.7",
     "@types/react-native": "^0.66.2",
+    "@types/react-native-video": "^5.0.11",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
