--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,12 @@ android {
     }
     signingConfigs {
         debug {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+        release {
             storeFile file('my-upload-key.keystore')
             storePassword 'android'
             keyAlias 'my-key-alias'
