--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "pod":"cd ios && pod install && cd .."
+    "pod": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.12.0",
+    "@invertase/react-native-apple-authentication": "^2.1.5",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/datetimepicker": "^3.5.2",
