--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
     "paths": {
+      "@HOC": ["src/HOC"],
       "@assets": ["src/assets"],
       "@libs": ["src/libs"],
       "@mocks": ["src/mocks"],
