--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-navigation": "^3.4.0",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^8.3.3",
+    "apple-signin-auth": "^1.5.1",
     "axios": "^0.23.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "formik": "^2.2.9",
